--- a/src/sass/blocks/_advantages.scss
+++ b/src/sass/blocks/_advantages.scss
@@ -2,7 +2,7 @@
     min-height: 471px;
     padding: 69px 0 81px 0;
     background-color: #F6F6F6;
-    &__header {
+    .title {
         color: #0D0D0D;
         font-weight: 700;
         line-height: 30px;
