--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -12,3 +12,7 @@
 @import 'blocks/buttons';
 @import 'blocks/advantages';
 @import 'base/media';
+@import 'blocks/consultation';
+@import 'blocks/forms';
+@import 'blocks/carousel';
+@import 'blocks/catalog';
