add feedback section in html

--- a/src/sass/blocks/_catalog.scss
+++ b/src/sass/blocks/_catalog.scss
@@ -98,6 +98,7 @@
             margin-bottom: 21px;
             background-color: #e8e8e8;
             border-bottom: none;
+            opacity: 0.4;
         }
         &__footer {
             display: flex;
